src/objects/Service_Date__c.object
<CustomObject>
    <fields>
        <fullName>Work_Order_Notes__c</fullName>
        <label>Work Order - Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order_Pictures_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order -  Pictures Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Reason_for_Return_Trip__c</fullName>
        <label>Work Order - Reason for Return Trip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <formula>text(Related_Work_Order__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order - Type of Internet</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_of_Service_Dates2__c</fullName>
        <label>Work Order - # of Service Dates2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofReviewsforSD__c</fullName>
        <label># of Reviews for SD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_reschedules__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of reschedules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Date</label>
    <listViews>
        <fullName>OBD_My_Service_Dates_Today</fullName>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>NAME</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <columns>CheckedInYES__c</columns>
        <columns>CheckedOutYES__c</columns>
        <columns>Issue__c</columns>
        <columns>Technician_Name__c</columns>
        <columns>Technician_Phone__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ServiceDateStart__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>OBD_My Service Dates Today</label>
        <sharedTo>
            <roleAndSubordinates>OnboardingManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OBD_My_Service_Dates_Tomorrow</fullName>
        <columns>Field_Partner__c</columns>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <columns>Tech_Update__c</columns>
        <columns>TechnicianPhoneFromLegacy__c</columns>
        <columns>TechnicianNameFromLegacy__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ServiceDateEnd__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>OBD_My Service Dates Tomorrow</label>
        <sharedTo>
            <roleAndSubordinates>OnboardingManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OBD_My_Week_s_Service_Dates</fullName>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ServiceDateEnd__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>OBD_My Week&apos;s Service Dates</label>
        <sharedTo>
            <roleAndSubordinates>OnboardingManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Outstanding_Pictures_and_Videos</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
        <columns>Related_Member_Practice__c</columns>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>NAME</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>Technician_Name__c</columns>
        <columns>Technician_Phone__c</columns>
        <columns>Pictures_Received__c</columns>
        <columns>Video_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceDateEnd__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>contains</operation>
            <value>Installation</value>
        </filters>
        <filters>
            <field>Pictures_Received__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Video_Received__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>notEqual</operation>
            <value>Deinstallation</value>
        </filters>
        <label>Outstanding Pictures and Videos</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Service_Closed_Dates</fullName>
        <columns>Case_Owner__c</columns>
        <columns>Case_Owner_Phone__c</columns>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <columns>CheckedInYES__c</columns>
        <columns>CheckedOutYES__c</columns>
        <columns>Technician_Name__c</columns>
        <columns>Technician_Phone__c</columns>
        <columns>Field_Partner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceDateStart__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Work_Order_Closed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CheckedOutYES__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Today&apos;s Service Dates_Closed</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Service_Dates</fullName>
        <columns>Case_Owner__c</columns>
        <columns>Case_Owner_Phone__c</columns>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>NAME</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <columns>CheckedInYES__c</columns>
        <columns>CheckedOutYES__c</columns>
        <columns>Issue__c</columns>
        <columns>Technician_Name__c</columns>
        <columns>Technician_Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceDateStart__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Service Dates</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Service_Dates_Open_FollowUp</fullName>
        <columns>Case_Owner__c</columns>
        <columns>Case_Owner_Phone__c</columns>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <columns>CheckedInYES__c</columns>
        <columns>CheckedOutYES__c</columns>
        <columns>Technician_Name__c</columns>
        <columns>Technician_Phone__c</columns>
        <columns>Field_Partner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceDateStart__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>WorkOrderCompleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Work_Order_Closed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Today&apos;s Service Dates_Open_FollowUp</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Service_Open_Dates</fullName>
        <columns>Case_Owner__c</columns>
        <columns>Case_Owner_Phone__c</columns>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <columns>CheckedInYES__c</columns>
        <columns>CheckedOutYES__c</columns>
        <columns>Technician_Name__c</columns>
        <columns>Technician_Phone__c</columns>
        <columns>Field_Partner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceDateStart__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>WorkOrderCompleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Work_Order_Closed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CheckedOutYES__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Today&apos;s Service Dates_Open</label>
    </listViews>
    <listViews>
        <fullName>Tomorrows_Service_Dates</fullName>
        <columns>Case_Owner__c</columns>
        <columns>Field_Partner__c</columns>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceDateEnd__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tomorrow&apos;s Service Dates</label>
    </listViews>
    <listViews>
        <fullName>Week_s_Service_Dates</fullName>
        <columns>Case_Owner__c</columns>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceDateEnd__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Week&apos;s Service Dates</label>
    </listViews>
    <listViews>
        <fullName>Week_s_Service_Dates_Not_Assigned_NDS</fullName>
        <columns>Case_Owner__c</columns>
        <columns>CMH_ID__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Member_Practice_City_State__c</columns>
        <columns>CM_WO_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceDateEnd__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Case_Owner__c</field>
            <operation>notEqual</operation>
            <value>Ronnie Jackson,Alexander Castillo,Josh Filippi,Nick Dunn,Kamal Heer</value>
        </filters>
        <filters>
            <field>Case_Owner__c</field>
            <operation>notEqual</operation>
            <value>Tim Stevenson,Caleb Richardson,Daniel Cohn,Salvador Vega,Ifeanyi Okocha</value>
        </filters>
        <filters>
            <field>Case_Owner__c</field>
            <operation>notContain</operation>
            <value>MTI</value>
        </filters>
        <label>Week&apos;s Service Dates Not Assigned NDS</label>
    </listViews>
    <listViews>
        <fullName>techlink_SD</fullName>
        <columns>NAME</columns>
        <columns>ServiceDateStart__c</columns>
        <columns>CMH_ID__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Field_Partner__c</field>
            <operation>equals</operation>
            <value>techlink</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Techlink-SD Not Released</label>
    </listViews>
    <nameField>
        <displayFormat>ServiceDate-{000000}</displayFormat>
        <label>Service Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Completed_Service_Date_with_no_Issue</fullName>
        <active>true</active>
        <description>Don&apos;t allow the user to save a service date as completed but not fill out an issue.</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Closed - Billable&quot;), ISBLANK(Issue__c))</errorConditionFormula>
        <errorDisplayField>Issue__c</errorDisplayField>
        <errorMessage>You must fill out the issue field before you can save this Service Date as Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Can_NOT_Be_Created</fullName>
        <active>true</active>
        <description>The new Service Date for this work order can not be created because there are existing Service dates with &quot;New&quot; status. Please Close/Cancel existing Service date  and create new   record.</description>
        <errorConditionFormula>AND(ISNEW(), Related_Work_Order__r.NumberofNewServiceDates__c&gt;0 )</errorConditionFormula>
        <errorMessage>The new Service Date for this work order can not be created because there are existing Service dates with &quot;New&quot; status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Can_NOT_be_ReOpened</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;New&quot;), 
(OR( 
ISPICKVAL(PRIORVALUE(Status__c), &quot;Closed - Billable&quot;), 
ISPICKVAL(PRIORVALUE(Status__c), &quot;Canceled - Do Not Pay&quot;) 
)))</errorConditionFormula>
        <errorMessage>After status has changed to &quot;Canceled&quot; or &quot;Closed&quot; it can&apos;t be returned back to &quot;New&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Date_End_greater_than_Start</fullName>
        <active>true</active>
        <errorConditionFormula>ServiceDateEnd__c &lt;  ServiceDateStart__c</errorConditionFormula>
        <errorDisplayField>ServiceDateEnd__c</errorDisplayField>
        <errorMessage>Service Date End must be greater than Service Date Start</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_dates_can_not_be_modified</fullName>
        <active>true</active>
        <description>Service dates can&apos;t be modified once selected and saved.</description>
        <errorConditionFormula>OR(
AND((DATEVALUE(ServiceDateStart__c))&lt;&gt;(DATEVALUE(PRIORVALUE(ServiceDateStart__c))),  
NOT(ISBLANK(PRIORVALUE(ServiceDateStart__c)))),
AND((DATEVALUE(ServiceDateEnd__c))&lt;&gt;(DATEVALUE(PRIORVALUE(ServiceDateEnd__c))),  
NOT(ISBLANK(PRIORVALUE(ServiceDateEnd__c))))
)</errorConditionFormula>
        <errorMessage>Service dates can&apos;t be modified once selected and saved. Cancel or close this record and create new service date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Reason_Required</fullName>
        <active>true</active>
        <description>Status Reason is required when Status is not &quot;New&quot;</description>
        <errorConditionFormula>AND(AND (
NOT(ISPICKVAL( Status__c , &apos;NEW&apos;)), 
NOT(ISPICKVAL( Status__c , &apos;Release to Vendor&apos;)),
NOT(ISPICKVAL( Status__c , &apos;Received&apos;))  
) ,ISBLANK(TEXT(StatusReason__c)))</errorConditionFormula>
        <errorMessage>Status Reason is required when Status is &quot;Canceled&quot; or &quot;Closed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tech_Issues_Required</fullName>
        <active>true</active>
        <description>When Status Reason selection is &quot;Tech Related Issue&quot; then Issue(s) field should have at least one entry starting with &quot;Tech&gt;&quot;</description>
        <errorConditionFormula>AND(CONTAINS( TEXT( StatusReason__c),&quot;Tech Related Issue&quot;),
 (AND
(
NOT(INCLUDES(Issue__c, &quot;Tech&gt;Abandoned Job&quot; )),
NOT(INCLUDES(Issue__c, &quot;Tech&gt;Compliance Issue&quot; )),
NOT(INCLUDES(Issue__c, &quot;Tech&gt;Late&quot; )),
NOT(INCLUDES(Issue__c, &quot;Tech&gt;No Show&quot; ))
)
)
)</errorConditionFormula>
        <errorMessage>When Status Reason selection is &quot;Tech Related Issue&quot; then Issue(s) field should have at least one entry starting with &quot;Tech&gt;&quot;</errorMessage>
    </validationRules>
</CustomObject>